# arc_moveit_config

./: CMakeLists.txt  package.xml
config/: kinematics.yaml  ur_controller.yaml  ur_controllers_lite.yaml
config/old/: kinematics.yaml
rviz/: view_robot.rviz
